--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -12,6 +12,7 @@
 .hero-section {
   position: relative;
   width: 100%;
+  height: 59.79vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,11 +30,11 @@
 
 .hero-overlay {
   position: absolute;
-  width: 1100vw;
+  width: 100vw;
   height: 59.79vw;
   background: linear-gradient(
     360deg,
-    rgb(255, 255, 255) 5%,
+    rgb(255, 255, 255) 3%,
     rgba(0, 0, 0, 0.3) 20%
   );
   z-index: -1;
@@ -46,7 +47,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  margin-bottom: 28.64vw;
+  margin-bottom: 29vw;
 }
 
 .hero-title {
@@ -79,8 +80,7 @@
 
 .hero-text {
   position: absolute;
-  bottom: -26.04vw;
-  left: 0px;
+  bottom: -24vw;
   display: flex;
   gap: 14.9vw;
 }
@@ -136,4 +136,32 @@
 
 .hero-contact-info a:hover {
   text-decoration: underline;
+}
+
+.hero-button {
+  position: absolute;
+  bottom: 2.5vw;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 45.36vw;
+  height: 4.79vw;
+  background: rgba(132, 170, 200, 1);
+  border-radius: 3.22vw;
+  border: none;
+  cursor: pointer;
+  font-family: "centurygothic";
+  font-weight: 400;
+  font-size: 2.6vw;
+  line-height: 2.9vw;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+}
+
+.hero-button:hover {
+  background: rgba(102, 128, 160, 1);
 }
